--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 <body>
     <div class="container">
         <h1>Wheel of Luck! By: ineedhelponmytest</h1>
-		<p>HOW TO PLAY: Press the "Spin" button to spin the wheel of luck, then either collect your total session earings, or keep spinning. The level changes every time you get 10 XP times the level you are currently on. the game is stored in your browser data so it will save your progress.</p>
+	<p>Login every day to get a daily bonus!</p>	
+	    <p>HOW TO PLAY: Press the "Spin" button to spin the wheel of luck, then either collect your total session earings, or keep spinning. The level changes every time you get 10 XP times the level you are currently on. the game is stored in your browser data so it will save your progress.</p>
         <div id="randomNumber">0</div>
         <button id="shuffleButton">Spin</button>
         <button id="collectButton" disabled>Collect Earnings</button>
