--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
         }
     </style>
 </head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RQPJ2KQE95"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RQPJ2KQE95');
+</script>
+
 <body>
     <div class="container">
 	<br>
